--- a/Layouts/Tabuleiro4.xml
+++ b/Layouts/Tabuleiro4.xml
@@ -1451,7 +1451,7 @@
             </instances>
             <effects />
         </layer>
-        <layer name="POPUP" sid="158138347289620">
+        <layer name="PopupSubliminar" sid="158138347289620">
             <initially-visible>1</initially-visible>
             <background-color>255,255,255</background-color>
             <transparent>1</transparent>
