--- a/Layouts/Tabuleiro8.xml
+++ b/Layouts/Tabuleiro8.xml
@@ -1496,7 +1496,7 @@
             </instances>
             <effects />
         </layer>
-        <layer name="POPUP" sid="775113232105983">
+        <layer name="PopupSubliminar" sid="775113232105983">
             <initially-visible>1</initially-visible>
             <background-color>255,255,255</background-color>
             <transparent>1</transparent>
