--- a/Layouts/Tabuleiro5.xml
+++ b/Layouts/Tabuleiro5.xml
@@ -1451,7 +1451,7 @@
             </instances>
             <effects />
         </layer>
-        <layer name="POPUP" sid="614861115913324">
+        <layer name="PopupSubliminar" sid="614861115913324">
             <initially-visible>1</initially-visible>
             <background-color>255,255,255</background-color>
             <transparent>1</transparent>
